# mcp-JSONPlaceholder

./: README.md  cursor-config-guide.md  cursor-global-setup.md  cursor_runner.sh  demo.py  pyproject.toml  server.py  test_server.py
